--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     
     <!-- Favicon (opcional) -->
-    <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="icon" type="image/png" href="./assets/favicon.ico">
 </head>
 <body>
     <div class="container">
