--- a/index.html
+++ b/index.html
@@ -197,15 +197,68 @@
         <!-- FOOTER -->
         <footer class="footer">
             <div class="footer-content">
-                <p class="footer-text">
-                    ¿Necesitas ayuda? 
-                    <a href="mailto:braiansilva4@gmail.com" class="footer-link" id="footerEmail">
-                        braiansilva4@gmail.com
-                    </a>
-                </p>
-                <p class="footer-copyright">
-                    © 2026 Braian Silva. Agenda online.
-                </p>
+                <!-- Sección de Contacto -->
+                <div class="footer-contact-section">
+                    <p class="footer-text">
+                        ¿Necesitas ayuda? 
+                        <a href="mailto:braiansilva4@gmail.com" class="footer-email">
+                            braiansilva4@gmail.com
+                        </a>
+                    </p>
+
+                    <!-- Botones de Acción -->
+                    <div class="footer-actions">
+                        <!-- WhatsApp -->
+                        <a 
+                            href="https://wa.me/59899123456?text=Hola!%20Quiero%20agendar%20una%20cita" 
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            class="footer-btn footer-btn-whatsapp"
+                        >
+                            <span class="footer-btn-icon">📱</span>
+                            <span class="footer-btn-text">WhatsApp</span>
+                        </a>
+
+                        <!-- Ubicación -->
+                        <a 
+                            href="https://maps.google.com/?q=-34.909166,-54.958056" 
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            class="footer-btn footer-btn-location"
+                        >
+                            <span class="footer-btn-icon">📍</span>
+                            <span class="footer-btn-text">Ubicación</span>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Divider -->
+                <div class="footer-divider"></div>
+
+                <!-- Copyright y Créditos -->
+                <div class="footer-bottom">
+                    <p class="footer-copyright">
+                        © 2026 Braian Silva. Agenda online.
+                    </p>
+
+                    <!-- Créditos del Creador -->
+                    <div class="footer-credits">
+                        <span class="footer-credits-text">Página creada por</span>
+                        <a 
+                            href="https://braiansilva-dev.github.io/portfolio/"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            class="footer-credits-link"
+                        >
+                            <img 
+                                src="./assets/logo.webp" 
+                                alt="Logo Braian Silva"
+                                class="footer-credits-logo"
+                            />
+                            <span>Braian Silva</span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </footer>
 
